[gd_scene load_steps=2 format=3 uid="uid://s23bgcib7g5x"]

[ext_resource type="Script" path="res://Scenes/Characters/PlayerCharacter/HUD/LatencyTracker/LatencyTrackerHUD.gd" id="1"]

[node name="LatencyTrackerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FramesAheadOfLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Frames Ahead Of:"

[node name="FramesAheadOfServer" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Server"

[node name="PingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ping: 0 ms"

[node name="PingTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="PingTimer" to="." method="_on_ping_timer_timeout"]
